Bug 235243: Need drag and drop feedback for toolbar bookmarks (and menuitem bookmarks for gtk2). In addition to the DND feedback, this patch: - introduces a new var 'BookmarksInsertion' that 'encapsulates' DND feedback display. - rewrite the rtl handling related to DND. BookmarksInsertion deals with this subtleties and the "public" feedback orientation ("before"|"on"|"after") returned by BookmarksInsertion.getOrientation refers now to the DOM. - paste and copy commands on the menus now insert after the rclicked element. The hack that appended everything at the end of the container has been removed or more accurately replaced by another one that is at least invisible to the user and we already used for DND. The problem is due a problem with the content building of containers with siblings (open in tabs stuff) not generated by the bookmarks template. - usual small glitch fixing.
UltraBlame original commit: 70bed969caa8d2fc81231b4d4fd3679490221e59

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -491,6 +491,20 @@ buttons
 :
 *
 /
+#
+insertion
+-
+feedback
+-
+button
+{
+max
+-
+width
+:
+10px
+;
+}
 toolbarbutton
 .
 bookmark
@@ -819,19 +833,32 @@ transparent
 !
 important
 ;
+border
+-
+left
+:
+0px
+solid
+transparent
+!
+important
+;
+border
+-
+right
+:
+0px
+solid
+transparent
+!
+important
+;
 padding
 :
 1px
 3px
 1px
 2px
-;
-margin
--
-top
-:
--
-1px
 ;
 }
 .
@@ -887,60 +914,6 @@ item
 [
 dragover
 -
-left
-=
-"
-true
-"
-]
-{
--
-moz
--
-border
--
-left
--
-colors
-:
-#
-000000
-;
-}
-.
-bookmark
--
-item
-[
-dragover
--
-right
-=
-"
-true
-"
-]
-{
--
-moz
--
-border
--
-right
--
-colors
-:
-#
-000000
-;
-}
-.
-bookmark
--
-item
-[
-dragover
--
 top
 =
 "
@@ -951,14 +924,22 @@ true
 -
 moz
 -
+appearance
+:
+none
+!
+important
+;
+-
+moz
+-
 border
 -
 top
 -
 colors
 :
-#
-000000
+MenuText
 ;
 }
 .
@@ -978,14 +959,22 @@ true
 -
 moz
 -
+appearance
+:
+none
+!
+important
+;
+-
+moz
+-
 border
 -
 bottom
 -
 colors
 :
-#
-000000
+MenuText
 ;
 }
 /
